--- a/angular.json
+++ b/angular.json
@@ -2,5 +2,113 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "newProjectRoot": "projects",
-  "projects": {}
+  "cli": {
+    "packageManager": "yarn"
+  },
+  "projects": {
+    "platform": {
+      "root": "projects/platform/",
+      "sourceRoot": "projects/platform/src",
+      "projectType": "application",
+      "prefix": "app",
+      "schematics": {},
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:browser",
+          "options": {
+            "outputPath": "dist/platform",
+            "index": "projects/platform/src/index.html",
+            "main": "projects/platform/src/main.ts",
+            "polyfills": "projects/platform/src/polyfills.ts",
+            "tsConfig": "projects/platform/tsconfig.app.json",
+            "assets": [
+              "projects/platform/src/favicon.ico",
+              "projects/platform/src/assets"
+            ],
+            "styles": [
+              "projects/platform/src/styles.css"
+            ],
+            "scripts": [
+              {
+                "input": "node_modules/document-register-element/build/document-register-element.js"
+              }
+            ]
+          },
+          "configurations": {
+            "production": {
+              "fileReplacements": [
+                {
+                  "replace": "projects/platform/src/environments/environment.ts",
+                  "with": "projects/platform/src/environments/environment.prod.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "aot": true,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true,
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "2mb",
+                  "maximumError": "5mb"
+                }
+              ]
+            }
+          }
+        },
+        "serve": {
+          "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "browserTarget": "platform:build"
+          },
+          "configurations": {
+            "production": {
+              "browserTarget": "platform:build:production"
+            }
+          }
+        },
+        "extract-i18n": {
+          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "options": {
+            "browserTarget": "platform:build"
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/platform/src/test.ts",
+            "polyfills": "projects/platform/src/polyfills.ts",
+            "tsConfig": "projects/platform/tsconfig.spec.json",
+            "karmaConfig": "projects/platform/karma.conf.js",
+            "styles": [
+              "projects/platform/src/styles.css"
+            ],
+            "scripts": [],
+            "assets": [
+              "projects/platform/src/favicon.ico",
+              "projects/platform/src/assets"
+            ]
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/platform/tsconfig.app.json",
+              "projects/platform/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
+    }
+  },
+  "defaultProject": "platform"
 }
