refactored score/sync strategies and blockapi constructor params, enabled strict true

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,10 @@
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "strict": true,
     "noUnusedLocals": true,
+    "strictPropertyInitialization": false,
+    "suppressImplicitAnyIndexErrors": true,
     "target": "es5",
     "typeRoots": [
       "node_modules/@types"
