added config class and BlockGroup component

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "experimentalDecorators": true,
     "strict": true,
     "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "strictPropertyInitialization": false,
     "suppressImplicitAnyIndexErrors": true,
     "target": "es5",
