--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "document-register-element": "^1.7.2",
     "elements-zone-strategy": "^7.0.0",
     "rxjs": "~6.3.3",
+    "shuffle-seed": "^1.1.6",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
